# InshtantMeshenger

./: .gitignore  INSTALL.md  LICENSE  README.md  add_a_peer.ui  build_script.sh  make_script.sh
GUI/: Key_PHP.qml  chat.h  chat.ui  dialog.ui  main.cpp  untitled.pro
doc/: README.md  style_guide.md  wire_protocol.txt
inshtant_meshenger/: .gitignore  README.md
inshtant_meshenger/build-qt_test-Desktop_Qt_5_5_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
inshtant_meshenger/build-qt_test-Desktop_Qt_5_5_0_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp
inshtant_meshenger/gui/: 309_test.pro  CMakeLists.txt  Chat.qml  Php_Key.qml  chat.cpp  chat.h  chat.ui  dialog.cpp  dialog.ui  mainwindow.ui  untitled.pro
inshtant_meshenger/inshtant_meshenger_gui/: Add_A_Peer.ui  CMakeLists.txt  PGP.cpp  PGP.h  PGP.ui  add_a_peer.cpp  add_a_peer.h  add_a_peer.ui  addbuddy.cpp  addbuddy.h  addbuddy.ui  addpeer.cpp  addpeer.h  addpeer.ui  inshtant_meshenger_gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pgp.cpp  pgp.h  pgp.ui
inshtant_meshenger/qt_test/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_test.pro
libmeshenger/: CMakeLists.txt  README.md  hello.cpp  hello.h  main.cpp
libmeshenger/boost-test/: client.cpp  server.cpp
libmeshenger/include/: Main_parser.cpp  crypto.h  message_state.h  net.h  parser.h  state.h  tracker.h
libmeshenger/misc/: CMakeLists.txt  test-node.cpp  test-sender.cpp
libmeshenger/misc/test-sender/: CMakeLists.txt
libmeshenger/net/: discovery_broadcast_server.cpp
libmeshenger/src/: message_state.cpp
libmeshenger/src/crypto/: CMakeLists.txt  crypto.cpp  keygen.cpp  main.cpp
libmeshenger/src/net/: CMakeLists.txt  discovery_server.cpp  main.cpp  net.cpp  node.cpp
libmeshenger/src/parser/: CMakeLists.txt  clearmessage.cpp  encryptedmessage.cpp  hello.h  main.cpp  packet.cpp  parser.cpp
libmeshenger/src/state/: CMakeLists.txt  state.cpp  test.cpp
libmeshenger/src/tracker/: CMakeLists.txt  main.cpp  tracker.cpp
misc/: README.md
misc/test-node/: CMakeLists.txt  main.cpp
misc/test-sender/: main.cpp
