cmake_minimum_required (VERSION 2.6)
project (LibMeshenger)

SET(CMAKE_CXX_FLAGS "-g -std=c++11")
SET(LIBMESHENGER libmeshenger-net libmeshenger-crypto libmeshenger-parse libmeshenger-state -pthread)

include_directories("include")
include_directories("src/parser")
include_directories("src/net")
include_directories("src/state")
include_directories("../inshtant_meshenger/inshtant_meshenger_gui")
add_subdirectory("src/state" "bin_state")
add_subdirectory("src/parser" "bin")
add_subdirectory("src/net" "bin_net")
add_subdirectory("misc" "bin_demo")
add_subdirectory("src/crypto" "bin_crypto")
add_subdirectory("../inshtant_meshenger/inshtant_meshenger_gui" "bin_gui")
